--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 
 <body>
 
+	<!-- Modal -->
+
+	
+
 	<div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -50,6 +54,22 @@
 <!--     <div id="wrap"> -->
 
 	<div class="container-fluid">
+
+<a href="#myModal" role="button" class="btn" data-toggle="modal">Launch demo modal</a>
+<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="myModalLabel">Modal header</h3>
+  </div>
+  <div class="modal-body">
+    <p>One fine body…</p>
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+    <button class="btn btn-primary">Save changes</button>
+  </div>
+</div>
+		
 		<div class="row-fluid">
 			<div class="span4 indScroll">
 				<h2>Subscribed</h2>
@@ -70,12 +90,27 @@
 			</div>
 
 
-			<div class="span8 indScroll">
+			<div class="span8 indScroll rightBar">
 
 				<h2>Not Subscribed</h2>
 				<div id="notSubbed">
   					<h4>Activities Board at Columbia (ABC)</h4>
 					<div>
+						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
+						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
+						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
+						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
+						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
+						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
+						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
+						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
+						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
+						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
+						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
+						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
+						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
+						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
+						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
 						<p>The Activities Board at Columbia is the largest undergraduate governing board at Columbia, representing a diverse collection of 150 student groups. If you are interested in creating a new group, click our documents tab for further information.</p>
 					</div>
   					<h4>After-Hours Tutoring</h4>
@@ -111,7 +146,7 @@
 
 <!-- Scripts -->
 
-	<script src="js/bootstrap.min.js"></script>
+	<script src="js/bootstrap.js"></script>
 	<script src="http://code.jquery.com/jquery-1.9.0.js"></script>
 	<script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
 	<script src="js/main.js"></script>
