--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 	<div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
-        <div class="container">
+        <div class="container-fluid">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -48,28 +48,39 @@
       </div>
     </div>
 
-<!--     <div id="wrap"> -->
-
-	<div class="container-fluid">
-		<div class="row-fluid">
-			<div class="span5 indScroll">
-				<h2>Subscribed</h2>
-				<div id="subbed">
-  					<!--dynamically populated now-->
+	<div id="fixScroll">
+		<div class="container-fluid">
+			<div class="row-fluid">
+				<div class="span5">
+					<h2>Subscribed</h2>
 				</div>
-			</div>
-
-
-			<div class="span5 offset1 indScroll rightBar">
-
-				<h2>Not Subscribed</h2>
-				<div id="notSubbed">
-					<!--dynamically populated now-->
+				<div class="span5 offset1">
+					<h2>Subscribed</h2>
 				</div>
-
 			</div>
 		</div>
+		<div class="container-fluid">
+			<div class="row-fluid">
+				<div class="span5 indScroll">
+					<div id="subbed">
+	  					<!--dynamically populated now-->
+					</div>
+				</div>
 
+
+				<div class="span5 offset1 indScroll rightBar">
+					<div id="notSubbed">
+						<!--dynamically populated now-->
+					</div>
+
+				</div>
+			</div>
+
+		</div>
+	</div>
+
+	<div class="buttons-row">
+		<button class="btn btn-large btn-block btn-primary" type="button">Action!</button>
 	</div>
 
 <!-- Scripts -->
