--- a/contact.html
+++ b/contact.html
@@ -49,11 +49,11 @@
     	
 		<h1>Contact</h1>
 		<br>
-		<p>Please feel free to reach out with any inquiries!</p>
+		<p>Please feel free to reach out with any questions or concerns!</p>
 		<br>
-  		<p><t>Daniel Newman: dln2111@columbia.edu</t></p>
-  		<p><t>Ved Tanavde: vat2117@columbia.edu</t></p>
-  		<p><t>Polina Viro: pv2221@columbia.edu</t></p>
+  		<p>"            "Daniel Newman: dln2111@columbia.edu</p>
+  		<p>"            "Ved Tanavde: vat2117@columbia.edu</p>
+  		<p>"            "Polina Viro: pv2221@columbia.edu</p>
 
 	</div>
 
